[gd_scene load_steps=14 format=3 uid="uid://c1vbyd10b2vb1"]

[ext_resource type="Texture2D" uid="uid://co4qh35dnffsq" path="res://sprites/Enemies/Slime/slime-Sheet.png" id="1_3au6y"]
[ext_resource type="Script" path="res://Script/Interactables/enemies/slime.gd" id="1_gqjhj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0hej"]
size = Vector2(23, 14)

[sub_resource type="Animation" id="Animation_xhij3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DmgHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e0fnm"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.7, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DmgHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.8, 0.833333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, false, false, true, true]
}

[sub_resource type="Animation" id="Animation_m7lj0"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.333333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.933333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_gkk5q"]
resource_name = "hurt"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_t3unv"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.466667, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_7ntkb"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22f83"]
_data = {
"RESET": SubResource("Animation_xhij3"),
"attack": SubResource("Animation_e0fnm"),
"dead": SubResource("Animation_m7lj0"),
"hurt": SubResource("Animation_gkk5q"),
"idle": SubResource("Animation_t3unv"),
"walk": SubResource("Animation_7ntkb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ptdg"]
size = Vector2(20, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kwbq"]
size = Vector2(23, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1p2a"]

[node name="Slime" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_gqjhj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4)
shape = SubResource("RectangleShape2D_h0hej")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_22f83")
}
autoplay = "idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_3au6y")
hframes = 8
vframes = 3
frame = 1

[node name="aim" type="Area2D" parent="."]

[node name="aim" type="CollisionShape2D" parent="aim"]
position = Vector2(-16, 4.25)
shape = SubResource("RectangleShape2D_3ptdg")
debug_color = Color(0.866937, 0.0962503, 0.822639, 0.42)

[node name="SlimeHitbox" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeHitbox"]
position = Vector2(0.5, 4)
shape = SubResource("RectangleShape2D_3kwbq")
debug_color = Color(0.416289, 0.604974, 0, 0.42)

[node name="DmgHitbox" type="Area2D" parent="." groups=["attack"]]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DmgHitbox"]
position = Vector2(-16, 2)
shape = SubResource("RectangleShape2D_n1p2a")
disabled = true
debug_color = Color(0.964706, 0, 0.211765, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-40, 0)

[node name="RigthRayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(40, 0)

[connection signal="body_entered" from="aim" to="." method="_on_aim_body_entered"]
[connection signal="area_entered" from="SlimeHitbox" to="." method="_on_slime_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
